RESOLVED FIXED187820
CrashTracer: com.apple.WebKit.WebContent.Development at com.apple.WebCore: std::optional<WTF::Vector<WebCore::PluginInfo, 0ul, WTF::CrashOnOverflow, 16ul> >::operator* & + 73
https://bugs.webkit.org/show_bug.cgi?id=187820
Summary CrashTracer: com.apple.WebKit.WebContent.Development at com.apple.WebCore: st...
Dean Jackson
Reported 2018-07-19 14:44:46 PDT
CrashTracer: com.apple.WebKit.WebContent.Development at com.apple.WebCore: std::optional<WTF::Vector<WebCore::PluginInfo, 0ul, WTF::CrashOnOverflow, 16ul> >::operator* & + 73
Attachments
Patch (1.79 KB, patch)
2018-07-19 14:49 PDT, Dean Jackson
graouts: review+
Dean Jackson
Comment 1 2018-07-19 14:45:40 PDT
Dean Jackson
Comment 2 2018-07-19 14:49:14 PDT
Dean Jackson
Comment 3 2018-07-19 16:18:20 PDT
WebKit Commit Bot
Comment 4 2018-07-20 08:39:04 PDT
Re-opened since this is blocked by bug 187855
Ryan Haddad
Comment 5 2018-07-20 08:41:52 PDT
(In reply to WebKit Commit Bot from comment #4) > Re-opened since this is blocked by bug 187855 Didn't mean to add this to a rollout. Closing.
Note You need to log in before you can comment on or make changes to this bug.