CrashTracer: com.apple.WebKit.WebContent.Development at com.apple.WebCore: std::optional<WTF::Vector<WebCore::PluginInfo, 0ul, WTF::CrashOnOverflow, 16ul> >::operator* & + 73 https://bugs.webkit.org/show_bug.cgi?id=187820 <rdar://problem/42017759>

Reviewed by Antoine Quint.

Speculative fix for this crash, which is accessing an optional without checking
if it exists. The crash logs didn't point to a reproducible test case.

* plugins/PluginData.cpp:
(WebCore::PluginData::supportsWebVisibleMimeTypeForURL const): Return false if
the optional doesn't exist.

Canonical link: https://commits.webkit.org/203017@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234011 268f45cc-cd09-0410-ab3c-d52691b4dbfc